Add email address, enable COC

--- a/pages/irac-2026.md
+++ b/pages/irac-2026.md
@@ -36,17 +36,15 @@ Hope to see you in Amsterdam! More information coming soon.
 
 <!-- Venue, travel and accommodation -->
 
-<!--
 ## Code of conduct
 
 Our conference is dedicated to providing a harassment-free conference experience for everyone, regardless of gender, gender identity and expression, age, sexual orientation, disability, physical appearance, body size, race, ethnicity, religion (or lack thereof), or technology choices. We do not tolerate harassment of conference participants in any form. Sexual language and imagery is not appropriate for any conference venue, including talks, workshops, parties, Twitter and other online media. Conference participants violating these rules may be sanctioned or expelled from the conference without a refund at the discretion of the conference organizers.
 
-If you are being harassed or witnessed something inappropriate, would like to file a complaint, or have other concerns about the safety of participants, please do not hesitate to contact us at <email> or anyone from the organizing committee.
--->
+If you are being harassed or witnessed something inappropriate, would like to file a complaint, or have other concerns about the safety of participants, please do not hesitate to contact us at <irac2026@uva.nl> or anyone from the organizing committee.
 
 ## Contact
 
-Please contact us <!--at <email>--> with any questions that you may have regarding the conference, incl. your abstract submission, (informal) events you might want to organize (e.g. round-table discussions), etc.
+Please contact us <irac2026@uva.nl> with any questions that you may have regarding the conference, incl. your abstract submission, (informal) events you might want to organize (e.g. round-table discussions), etc.
 
 **Scientific committee**: Bart Kranstauber, Birgen Haest, Eva Knop and Isabel Metz.
 
