Update title, intro, text

--- a/_posts/2025-06-30-op-de-ring.md
+++ b/_posts/2025-06-30-op-de-ring.md
@@ -1,7 +1,7 @@
 ---
-title: The big Amsterdam bird game on the highway
+title: Festival participants learn about birds and radars through interactive games
 description: >
-  As part of the 750 years Amsterdam celibrations researchers from Amsterdam university played the big Amsterdam bird game with participants of the "Op de Ring" festival
+  Researchers of the University of Amsterdam organized a series of games at the "Op De Ring" festival, teaching participants about birds and radars.
 author: Bart Kranstauber
 background:
   img: /assets/backgrounds/2025-06-30-op-de-ring.jpg
@@ -10,4 +10,6 @@ tags: [outreach]
 toc: true
 ---
 
-Saterday the 21st of June the city of Amsterdam celibrated its 750 birthday with a [festival](https://opdering.amsterdam) on the highway. Researchers from the animal movement ecology group presented five different games around bird migration. In these games hunderds of participants learned about bird migration, foraging strategies, and how we use radars to study the responses of birds to wind turbines fireworks. 
+The city of Amsterdam celibrated its 750th birthday on June 21st with the [Op De Ring](https://opdering.amsterdam) festival. One of its highways was closed for the occasion. Students, teachers and researchers of several organizations showed participants how they are working together to build a liveable future for the city.
+
+Researchers from the University of Amsterdam animal movement ecology group presented the "Grote Amsterdamse Vogel Spel" (the Big Amsterdam Bird Game): five interactive games about birds. In these games hunderds of participants learned about bird migration, foraging strategies, and how radars are used to study the responses of birds to wind turbines and fireworks.
