--- a/pages/irac-2026.md
+++ b/pages/irac-2026.md
@@ -8,6 +8,7 @@ toc: true
 
 The **5th International Radar Aeroecology Conference (IRAC 2026)** will be held in Amsterdam on June 24-26, 2026. The conference will cover the latest international developments relevant to the use of different types of radars to monitor and understand flying animals. We plan to organize a **radar aeroecology course** before the conference on June 22-23.
 
+{.alert .alert-info}
 Hope to see you in Amsterdam! More information coming soon.
 
 <!-- Thematic sessions -->
@@ -46,6 +47,6 @@ If you are being harassed or witnessed something inappropriate, would like to fi
 
 Please contact us <irac2026@uva.nl> with any questions that you may have regarding the conference, incl. your abstract submission, (informal) events you might want to organize (e.g. round-table discussions), etc.
 
-**Scientific committee**: Bart Kranstauber, Birgen Haest, Eva Knop and Isabel Metz.
+**Scientific committee**: Bart Kranstauber, Birgen Haest, Eva Knop, Isabel Metz and Nadja Weisshaupt.
 
 **Organizing committee**: Judy Shamoun-Baranes, Elske Tielens, Peter Desmet, Cecilia Nilsson and Bart Hoekstra.
