--- a/pages/irac-2026.md
+++ b/pages/irac-2026.md
@@ -8,7 +8,7 @@ toc: true
 
 The **5th International Radar Aeroecology Conference (IRAC 2026)** will be held in Amsterdam on June 24-26, 2026. The conference will cover the latest international developments relevant to the use of different types of radars to monitor and understand flying animals. We plan to organize a **radar aeroecology course** before the conference on June 22-23.
 
-{.alert .alert-info}
+{:.alert .alert-info}
 Hope to see you in Amsterdam! More information coming soon.
 
 <!-- Thematic sessions -->
