--- a/pages/irac-2026.md
+++ b/pages/irac-2026.md
@@ -1,12 +1,12 @@
 ---
-title: 5th International Radar Aeroecology Conference
+title: 5th International Radar Aeroecology Conference & Workshop
 background: https://images.unsplash.com/photo-1468436385273-8abca6dfd8d3?q=80&w=2810&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
 description: June 24-26, 2026 in Amsterdam, the Netherlands.
 permalink: /irac-2026/
 toc: true
 ---
 
-The **5th International Radar Aeroecology Conference (IRAC 2026)** will be held in Amsterdam on June 24-26, 2026. The conference will cover the latest international developments relevant to the use of different types of radars to monitor and understand flying animals. We plan to organize a **radar aeroecology course** before the conference on June 22-23.
+The **5th International Radar Aeroecology Conference (IRAC 2026)** will be held in Amsterdam on June 24-26, 2026. The conference will cover the latest international developments relevant to the use of different types of radars to monitor and understand flying animals. A **workshop** will take place before the conference on 22-23 June. This is a 2-day training in the use of radar for applications in aeroecology.
 
 {:.alert .alert-info}
 Hope to see you in Amsterdam! More information coming soon.
@@ -41,9 +41,11 @@ Hope to see you in Amsterdam! More information coming soon.
 
 Please contact us <irac2026@uva.nl> with any questions that you may have regarding the conference, incl. your abstract submission, (informal) events you might want to organize (e.g. round-table discussions), etc.
 
-**Scientific committee**: Bart Kranstauber, Birgen Haest, Eva Knop, Isabel Metz and Nadja Weisshaupt.
+**Scientific committee**: Bart Kranstauber, Birgen Haest, Eva Knop, Isabel Metz, Nadja Weisshaupt and Jeff Kelly.
 
 **Organizing committee**: Judy Shamoun-Baranes, Elske Tielens, Peter Desmet, Cecilia Nilsson and Bart Hoekstra.
+
+**Aeroecology workshop coordinator**: Kyle Horton
 
 ## Code of conduct
 
