--- a/pages/irac-2026.md
+++ b/pages/irac-2026.md
@@ -8,8 +8,10 @@ toc: true
 
 The **5th International Radar Aeroecology Conference (IRAC 2026)** will be held in Amsterdam on June 24-26, 2026. The conference will cover the latest international developments relevant to the use of different types of radars to monitor and understand flying animals. A **workshop** will take place before the conference on 22-23 June. This is a 2-day training in the use of radar for applications in aeroecology.
 
+
+
 {:.alert .alert-info}
-Hope to see you in Amsterdam! More information coming soon.
+Hope to see you in Amsterdam! More information coming soon. We will share updates on the meeting through the aeroecology [mailing list](https://groups.google.com/g/radar-aeroecology), please sign to make sure you stay up to date.
 
 <!-- Thematic sessions -->
 
