Update abstract submission deadline to 17 December 2025

--- a/pages/irac-2026.md
+++ b/pages/irac-2026.md
@@ -15,7 +15,7 @@ All conference updates will be communicated via the [Radar Aeroecology mailing l
 
 You can now submit an abstract for an oral presentation or poster at the conference. Abstracts will be reviewed by the scientific committee and you will be informed whether your abstract was accepted. We will not publish conference proceedings, but accepted abstracts will be published on this conference website.
 
-**Submission deadline: xx xx 2026**
+**Submission deadline: 17 December 2025**
 
 [Submit your abstract](https://forms.gle/1whd8Q5Kga73AU2F6){:.btn .btn-primary}
 
