Fix formatting of scientific committee section

--- a/pages/irac-2026.md
+++ b/pages/irac-2026.md
@@ -49,7 +49,7 @@ You can now submit an abstract for an oral presentation or poster at the confere
 
 Please contact us <irac2026@uva.nl> with any questions that you may have regarding the conference, incl. your abstract submission, (informal) events you might want to organize (e.g. round-table discussions), etc.
 
-**Scientific committee**: Bart Kranstauber, Birgen Haest, Eva Knop, Isabel Metz, Nadja Weisshaupt and Jeff Kelly.
+**Scientific committee**: Bart Kranstauber, Birgen Haest, Isabel Metz, Nadja Weisshaupt and Jeff Kelly.
 
 **Organizing committee**: Judy Shamoun-Baranes, Elske Tielens, Peter Desmet, Cecilia Nilsson and Bart Hoekstra.
 
