Close abstract submission and update review process
Updated abstract submission details and closed submissions.

--- a/pages/irac-2026.md
+++ b/pages/irac-2026.md
@@ -13,11 +13,8 @@ All conference updates will be communicated via the [Radar Aeroecology mailing l
 
 ## Abstract submission
 
-You can now submit an abstract for an oral presentation or poster at the conference. Abstracts will be reviewed by the scientific committee and you will be informed whether your abstract was accepted. We will not publish conference proceedings, but accepted abstracts will be published on this conference website.
-
-**Submission deadline: January 9, 2026 at 12:00 CET**
-
-[Submit your abstract](https://forms.gle/1whd8Q5Kga73AU2F6){:.btn .btn-primary}
+Abstract submission has closed the January 9, 2026 at 12:00 CET.
+We thank all contributors for all their exciting submissions. Abstracts will now be reviewed by the scientific committee and you will be informed whether your abstract was accepted in early February.
 
 <!-- Thematic sessions -->
 
