--- a/pages/irac-2026.md
+++ b/pages/irac-2026.md
@@ -11,10 +11,9 @@ The **5th International Radar Aeroecology Conference (IRAC 2026)** will be held 
 {:.alert .alert-info}
 All conference updates will be communicated via the [Radar Aeroecology mailing list](https://groups.google.com/g/radar-aeroecology). Please sign up to get notifications. [Contact us](irac2026@uva.nl) if you cannot sign up to Google Groups.
 
-## Abstract submission
+## Abstracts
 
-Abstract submission has closed the January 9, 2026 at 12:00 CET.
-We thank all contributors for all their exciting submissions. Abstracts will now be reviewed by the scientific committee and you will be informed whether your abstract was accepted in early February.
+**Abstract submission has closed**. We thank all contributors for their exciting submissions. Abstracts will be reviewed by the scientific committee and you will be informed whether your abstract was accepted in early February.
 
 <!-- Thematic sessions -->
 
