--- a/pages/irac-2026.md
+++ b/pages/irac-2026.md
@@ -6,29 +6,99 @@ permalink: /irac-2026/
 toc: true
 ---
 
-The **5th International Radar Aeroecology Conference (IRAC 2026)** will be held in Amsterdam on June 24-26, 2026. The conference will cover the latest international developments relevant to the use of different types of radars to monitor and understand flying animals. We plan to organize a **radar aeroecology course** before the conference on June 22-23.
+![Logo IRAC 2026](/assets/images/irac-2026-logo.png)
+
+The **5th International Radar Aeroecology Conference (IRAC 2026)** will be held in Amsterdam on June 24-26, 2026. The conference will cover the latest international developments relevant to the use of different types of radars to monitor and understand flying animals. We plan to organize a **radar aeroecology course** before the conference on June 22-23. The conference will be organized at [Amsterdam Science Park](https://www.google.com/maps/place/Science+Park,+Amsterdam/@52.3538274,4.9546474,17z/).
 
 Hope to see you in Amsterdam! More information coming soon.
+
+## Registration
+
+Registration to the conference is now open. Please register before April 28th **[here](https://www.aanmelder.nl/irac2026/registration?survey_id=208002)** to reserve your spot.
 
 <!-- Thematic sessions -->
 
 <!-- Keynote speakers -->
 
-<!-- Sponsors -->
+## Sponsors
 
-<!--
-## Programme
+We gratefully acknowledge the financial support of the following organizations:
 
-### Monday, June 22
+{:.d-flex .align-items-center .justify-content-between}
+[![Swiss Birdradar](/assets/images/irac-2026-logo-sbrs.jpg)](https://swiss-birdradar.com/){:style="width: 40%"}
+[![Robin Radar Systems](/assets/images/irac-2026-logo-rr.png)](https://www.robinradar.com/){:style="width: 40%"}
 
-### Tuesday, June 23
+## Preliminary Programme
+
+### Monday, June 22 & Tuesday, June 23
+
+Radar aeroecology course
 
 ### Wednesday, June 24
 
+8:30-9:00 | Registration
+9:00-9:15  | Welcome
+
+#### Session 1 - Migration ecology of birds
+
+9:15-9:45 | Keynote
+9:45-10:45 | Presentations
+10:45-11:15 | Coffee break
+
+#### Session 2 - Methodological advances
+
+11:15-12:00 | Presentations
+12:00-12:30 | Speed talks
+12:30-14:00 | Lunch break
+
+#### Session 3 - Observing insects at scale
+
+14:00-14:45 | Presentations
+14:45-15:30 | Poster session
+15:30-16:00 | Coffee break
+
+#### Session 4 - Migration ecology of birds (cont.)
+
+16:00-17:00 | Presentations
+17:00-17:30 | Speed talks
+17:30- | Welcome drinks
+
+
 ### Thursday, June 25
 
+#### Session 5 - Insect migration
+
+9:00-9:30 | Keynote
+9:30-10:30 | Presentations
+10:30-11:00 | Coffee break
+
+#### Session 6 - Radar applications in wind energy
+
+11:00-12:00 | Presentations
+12:00-12:30 | Speed talks
+12:30-14:00 | Lunch break
+
+#### Session 7 - Applications in radar aeroecology
+
+14:00-14:30 | Keynote
+14:30-15:30 | Presentations
+15:30-16:00 | Coffee break
+16:00-17:00 | Stakeholder meeting
+18:00-      | Conference dinner
+
 ### Friday, June 26
--->
+
+#### Session 8 - Movement ecology of bats and insects
+
+9:00-9:30 | Keynote
+9:30-10:15 | Presentations
+10:15-10:30 | Speed talks
+10:30-11:00 | Coffee break
+
+#### Session 9 - Monitoring the airspace
+
+11:00-12:15 | Presentations
+12:15-12:30 | Closing remarks
 
 <!-- Posters -->
 
