--- a/pages/irac-2026.md
+++ b/pages/irac-2026.md
@@ -8,17 +8,10 @@ toc: true
 
 ![Logo IRAC 2026](/assets/images/irac-2026-logo.png)
 
-The **5th International Radar Aeroecology Conference (IRAC 2026)** will be held in Amsterdam on June 24-26, 2026. 
-The conference will cover the latest international developments relevant to the use of different types of radars to monitor and understand flying animals. 
-A **workshop** will take place before the conference on 22-23 June. This is a 2-day training in the use of radar for applications in aeroecology.
-The conference will be organized at [Amsterdam Science Park](https://www.google.com/maps/place/Science+Park,+Amsterdam/@52.3538274,4.9546474,17z/).
+The **5th International Radar Aeroecology Conference (IRAC 2026)** will be held in Amsterdam on June 24-26, 2026.  The conference will cover the latest international developments relevant to the use of different types of radars to monitor and understand flying animals. A two-day **workshop** will take place before the conference on 22-23 June, providing training in the use of weather radar for applications in aeroecology.
 
 {:.alert .alert-info}
 All conference updates will be communicated via the [Radar Aeroecology mailing list](https://groups.google.com/g/radar-aeroecology). Please sign up to get notifications. [Contact us](irac2026@uva.nl) if you cannot sign up to Google Groups.
-
-## Abstracts
-
-**Abstract submission has closed**. We thank all contributors for their exciting submissions. Abstracts will be reviewed by the scientific committee and you will be informed whether your abstract was accepted in early February.
 
 ## Registration
 
@@ -113,6 +106,9 @@ Radar aeroecology course
 <!-- Abstracts -->
 
 <!-- Venue, travel and accommodation -->
+## Venue
+
+The conference will take place at the [Amsterdam Science Park](https://www.google.com/maps/place/Science+Park,+Amsterdam/@52.3538274,4.9546474,17z/).
 
 ## Contact
 
