--- a/pages/irac-2026.md
+++ b/pages/irac-2026.md
@@ -1,5 +1,5 @@
 ---
-title: 5th International Radar Aeroecology Conference & Workshop
+title: 5th International Radar Aeroecology Conference & Training workshop
 background: https://images.unsplash.com/photo-1468436385273-8abca6dfd8d3?q=80&w=2810&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
 description: June 24-26, 2026 in Amsterdam, the Netherlands.
 permalink: /irac-2026/
@@ -8,7 +8,7 @@ toc: true
 
 ![Logo IRAC 2026](/assets/images/irac-2026-logo.png)
 
-The **5th International Radar Aeroecology Conference (IRAC 2026)** will be held in Amsterdam on June 24-26, 2026.  The conference will cover the latest international developments relevant to the use of different types of radars to monitor and understand flying animals. A two-day **workshop** will take place before the conference on 22-23 June, providing training in the use of weather radar for applications in aeroecology.
+The **5th International Radar Aeroecology Conference (IRAC 2026)** will be held in Amsterdam on June 24-26, 2026.  The conference will cover the latest international developments relevant to the use of different types of radars to monitor and understand flying animals. An optional two-day **training workshop** will take place before the conference on 22-23 June, covering the use of weather radar for applications in aeroecology.
 
 {:.alert .alert-info}
 All conference updates will be communicated via the [Radar Aeroecology mailing list](https://groups.google.com/g/radar-aeroecology). Please sign up to get notifications. [Contact us](irac2026@uva.nl) if you cannot sign up to Google Groups.
@@ -31,9 +31,14 @@ We gratefully acknowledge the financial support of the following organizations:
 
 ## Preliminary Programme
 
-### Monday, June 22 & Tuesday, June 23
 
-Radar aeroecology course
+### Monday, June 22
+
+09:00-17:00| [Training workshop](#training-workshop) (optional)
+
+### Tuesday, June 23
+
+09:00-17:00 | [Training workshop (continued)](#training-workshop) (optional)
 
 ### Wednesday, June 24
 
@@ -101,6 +106,12 @@ Radar aeroecology course
 11:00-12:15 | Presentations
 12:15-12:30 | Closing remarks
 
+## Training workshop
+
+The pre-conference workshop will be a two-day long immersive training in the use of weather surveillance radar data for applications in aeroecology. We will cover the basics of radar remote sensing, data visualization, and data processing. Early-career professionals, practitioners, and students are encouraged to participate.
+
+For inquiries about the workshop, please contact [Kyle Horton](kghorton@purdue.edu).
+
 <!-- Posters -->
 
 <!-- Abstracts -->
@@ -118,11 +129,10 @@ Please contact us <irac2026@uva.nl> with any questions that you may have regardi
 
 **Organizing committee**: Judy Shamoun-Baranes, Elske Tielens, Peter Desmet, Cecilia Nilsson and Bart Hoekstra.
 
-**Aeroecology workshop coordinator**: Kyle Horton
+**Training workshop coordinator**: Kyle Horton
 
 ## Code of conduct
 
 Our conference is dedicated to providing a harassment-free conference experience for everyone, regardless of gender, gender identity and expression, age, sexual orientation, disability, physical appearance, body size, race, ethnicity, religion (or lack thereof), or technology choices. We do not tolerate harassment of conference participants in any form. Sexual language and imagery is not appropriate for any conference venue, including talks, workshops, parties, Twitter and other online media. Conference participants violating these rules may be sanctioned or expelled from the conference without a refund at the discretion of the conference organizers.
-
 
 If you are being harassed or witnessed something inappropriate, would like to file a complaint, or have other concerns about the safety of participants, please do not hesitate to contact us at <irac2026@uva.nl> or anyone from the organizing committee.
