--- a/pages/irac-2026.md
+++ b/pages/irac-2026.md
@@ -29,8 +29,15 @@ We gratefully acknowledge the financial support of the following organizations:
 [![Swiss Birdradar](/assets/images/irac-2026-logo-sbrs.jpg)](https://swiss-birdradar.com/){:style="width: 40%"}
 [![Robin Radar Systems](/assets/images/irac-2026-logo-rr.png)](https://www.robinradar.com/){:style="width: 40%"}
 
-## Preliminary Programme
+## Programme
 
+Times are indicated in local times for Amsterdam, Netherlands (CEST, UTC+02:00). See the [current time in Amsterdam](https://www.timeanddate.com/time/zone/netherlands/amsterdam).
+
+<style>
+  .table td:first-of-type {
+    width: 20%;
+ }
+</style>
 
 ### Monday, June 22
 
@@ -43,7 +50,7 @@ We gratefully acknowledge the financial support of the following organizations:
 ### Wednesday, June 24
 
 8:30-9:00 | Registration
-9:00-9:15  | Welcome
+9:00-9:15 | Welcome
 
 #### Session 1 - Migration ecology of birds
 
@@ -67,8 +74,7 @@ We gratefully acknowledge the financial support of the following organizations:
 
 16:00-17:00 | Presentations
 17:00-17:30 | Speed talks
-17:30- | Welcome drinks
-
+17:30 | Welcome drinks
 
 ### Thursday, June 25
 
@@ -90,7 +96,7 @@ We gratefully acknowledge the financial support of the following organizations:
 14:30-15:30 | Presentations
 15:30-16:00 | Coffee break
 16:00-17:00 | Stakeholder meeting
-18:30-      | Conference dinner
+18:30 | Conference dinner
 
 ### Friday, June 26
 
