Move up and style sponsors

--- a/pages/irac-2026.md
+++ b/pages/irac-2026.md
@@ -16,18 +16,17 @@ All conference updates will be communicated via the [Radar Aeroecology mailing l
 ## Registration
 
 Registration to the conference is now open. Please register before April 28th **[here](https://www.aanmelder.nl/irac2026/registration?survey_id=208002)** to reserve your spot.
+We gratefully acknowledge the financial support of the following organizations:
 
 <!-- Thematic sessions -->
+{:.d-flex .align-items-end .justify-content-around}
+[![Swiss Birdradar](/assets/images/swiss-bird-radar-logo.jpg)](https://swiss-birdradar.com/){:style="width: 40%"}
+[![Robin Radar Systems](/assets/images/robin-radar-logo.png)](https://www.robinradar.com/){:style="width: 20%"}
 
 <!-- Keynote speakers -->
 
-## Sponsors
 
-We gratefully acknowledge the financial support of the following organizations:
 
-{:.d-flex .align-items-center .justify-content-between}
-[![Swiss Birdradar](/assets/images/irac-2026-logo-sbrs.jpg)](https://swiss-birdradar.com/){:style="width: 40%"}
-[![Robin Radar Systems](/assets/images/irac-2026-logo-rr.png)](https://www.robinradar.com/){:style="width: 40%"}
 
 ## Programme
 
