Update registration link + indicate two dates

--- a/pages/irac-2026.md
+++ b/pages/irac-2026.md
@@ -13,20 +13,19 @@ The **5th International Radar Aeroecology Conference (IRAC 2026)** will be held 
 {:.alert .alert-info}
 All conference updates will be communicated via the [Radar Aeroecology mailing list](https://groups.google.com/g/radar-aeroecology). Please sign up to get notifications. [Contact us](irac2026@uva.nl) if you cannot sign up to Google Groups.
 
-## Registration
-
-Registration to the conference is now open. Please register before April 28th **[here](https://www.aanmelder.nl/irac2026/registration?survey_id=208002)** to reserve your spot.
 We gratefully acknowledge the financial support of the following organizations:
 
-<!-- Thematic sessions -->
 {:.d-flex .align-items-end .justify-content-around}
 [![Swiss Birdradar](/assets/images/swiss-bird-radar-logo.jpg)](https://swiss-birdradar.com/){:style="width: 40%"}
 [![Robin Radar Systems](/assets/images/robin-radar-logo.png)](https://www.robinradar.com/){:style="width: 20%"}
 
+## Registration
+
+[Register for the conference](https://www.aanmelder.nl/irac2026/registration){:.btn .btn-primary}
+
+Registration deadline: **March 20** for presenting authors. April 28 for other participants.
+
 <!-- Keynote speakers -->
-
-
-
 
 ## Programme
 
