--- a/pages/irac-2026.md
+++ b/pages/irac-2026.md
@@ -109,6 +109,7 @@ Times are indicated in local times for Amsterdam, Netherlands (CEST, UTC+02:00).
 
 11:00-12:15 | Presentations
 12:15-12:30 | Closing remarks
+13:30 | Post-conference activities (optional)
 
 ## Training workshop
 
