--- a/pages/irac-2026.md
+++ b/pages/irac-2026.md
@@ -13,7 +13,7 @@ The **5th International Radar Aeroecology Conference (IRAC 2026)** will be held 
 {:.alert .alert-info}
 All conference updates will be communicated via the [Radar Aeroecology mailing list](https://groups.google.com/g/radar-aeroecology). Please sign up to get notifications. [Contact us](irac2026@uva.nl) if you cannot sign up to Google Groups.
 
-We gratefully acknowledge the financial support of the following organizations:
+We thank the following organizations for providing financial support:
 
 {:.d-flex .align-items-end .justify-content-around}
 [![Swiss Birdradar](/assets/images/swiss-bird-radar-logo.jpg)](https://swiss-birdradar.com/){:style="width: 40%"}
