--- a/pages/irac-2026.md
+++ b/pages/irac-2026.md
@@ -115,7 +115,7 @@ Times are indicated in local times for Amsterdam, Netherlands (CEST, UTC+02:00).
 
 The pre-conference workshop will be a two-day long immersive training in the use of weather surveillance radar data for applications in aeroecology. We will cover the basics of radar remote sensing, data visualization, and data processing. Early-career professionals, practitioners, and students are encouraged to participate.
 
-For inquiries about the workshop, please contact [Kyle Horton](kghorton@purdue.edu).
+For inquiries about the workshop, please contact [Kyle Horton](mailto:kghorton@purdue.edu).
 
 <!-- Posters -->
 
